--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -3,15 +3,21 @@
 body {
   display: flex;
   flex-direction: column;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   min-height: 100vh;
   background-color: #f1f1f1;
   color: #222;
   text-align: center;
+  margin: 0px;
 }
 
 header {
   /* header styles */
+  font-size: 1.9em;
+  font-weight: bold;
+  background-color: #222;
+  color: #f1f1f1;
+  box-shadow: 0 2px 2px 2px #222
 }
 
 main {
@@ -19,8 +25,41 @@ main {
   padding: 20px;
 }
 
+.btns-container {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  position: sticky;
+}
+
+.btn {
+  background-color: rgba(34, 34, 34, .2);
+  padding: 1em;
+  width: 100%;
+  font-weight: bold;
+  font-size: 0.8em;
+}
+
+.btn.active {
+  background-color: rgba(34, 34, 34, .8);
+  color: #f1f1f1;
+  border-bottom: 6px solid rgba(34, 34, 34, 2);
+}
+
+.btn:hover {
+  cursor: pointer;
+  background: rgba(34, 34, 34, 1);
+  color: #f1f1f1;
+}
+
+/* .btn:active {
+  background: palevioletred;
+} */
+
 footer {
   /* footer styles */
+  background-color: #222;
+  color: #f1f1f1;
 }
 
 /* -------------------  TABLET  --------------------- */
